
<resources>
    <string name="app_name">Covid Tracker India</string>
    <string name="state_name_here">State Name Here</string>
    <string name="active_cases">Active Cases</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="activecaseshere">activecasesHere</string>
    <string name="confirmed_cases_here">confirmed cases here</string>
    <string name="recovered_cases">Recovered Cases</string>
    <string name="recovered">recovered</string>
    <string name="deaths">Deaths</string>
    <string name="About_ME">
    Hi,I am Sunny.An Ungrad Student(2023) in Computer Science \nI made this App using an API (https://api.covidindiatracker.com/state_data.json)\n
    </string>
    <string name="LINKS">
        Connect with \nme\nFacebook.com/sunny52525\nTwitter.com/sunny52525
        \n
    </string>
    <string name="about_weblink">Source code available of this app and Other small Things I made at https://github.com/sunny52525</string>
    <string name="about_email">For support or suggestion, email kumarsunny3232@gmail.com\n</string>
    <string name="facebook">To connect with me \nwww.facebook.com/sunny52525\nwww.twitter.com/sunny52525</string>
    <string name="Searchable_hint">Search Photos</string>
    <string name="click_on_state_to_view_districts">Click on state to view districts</string>
</resources>
